add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     <header class="header">
       <a href="#" class="header-link">
         <img
-          src="./images/header-bgimage.png"
+          src="./images/header-bgimage-higher-quality.png"
           alt="bgimage"
           class="header-link-photo"
         >
@@ -81,7 +81,7 @@
           <div class="aside-top-bar">
             <a href="#" class="aside-top-bar-link">
               <img
-                src="./images/icon-close-aside.png"
+                src="./images/icon-close-svg.svg"
                 alt="icon-close"
                 class="aside-top-bar-link-icon"
               >
@@ -141,7 +141,7 @@
           <div class="actual-events-container-for-grid">
             <a href="#" class="actual-events-first-link">
               <img
-                src="./images/actual-events-1-photo.png"
+                src="./images/act-events-1-desktop.png"
                 alt="actual-events-1-photo"
                 class="actual-events-first-link-photo"
               >
@@ -172,7 +172,7 @@
 
             <a href="#" class="actual-events-second-link">
               <img
-                src="./images/actual-events-2-photo.png"
+                src="./images/act-events-2-desktop.png"
                 alt="actual-events-1-photo"
                 class="actual-events-second-link-photo"
                 >
@@ -204,7 +204,7 @@
 
         <a href="#" class="actual-events-third-link">
           <img
-            src="./images/actual-events-3-photo.png"
+            src="./images/act-event-3-desktop.png"
             alt="actual-events-1-photo"
             class="actual-events-third-link-photo"
           >
@@ -228,7 +228,7 @@
           <div class="gallery-container-for-display-grid">
             <a href="#" class="gallery-first-link">
               <img
-                src="./images/gallery-first-photo.png"
+                src="./images/gallery-1-desktop.png"
                 alt="gallery-photo"
                 class="gallery-first-link-photo"
               >
@@ -244,7 +244,7 @@
 
             <a href="#" class="gallery-third-link">
               <img
-                src="./images/gallery-photo-three.png"
+                src="./images/gallery-3-desktop.png"
                 alt="gallery-photo"
                 class="gallery-third-link-photo"
               >
@@ -252,7 +252,7 @@
 
             <a href="#" class="gallery-fourth-link">
               <img
-                src="./images/gallery-photo-four.png"
+                src="./images/gallery-4-desktop.png"
                 alt="gallery-photo"
                 class="gallery-fourth-link-photo"
               >
@@ -260,7 +260,7 @@
 
             <a href="#" class="gallery-fifth-link">
               <img
-                src="./images/gallery-photo-five.png"
+                src="./images/gallery-5-desktop.png"
                 alt="gallery-photo"
                 class="gallery-fifth-link-photo"
               >
@@ -347,7 +347,7 @@
                 rel="noopener noreferrer"
               >
                 <img
-                  src="./images/facebook-logo.png"
+                  src="./images/facebook-svg.svg"
                   alt="facebook"
                   class="footer-socials-facebook-logo"
                 >
@@ -360,7 +360,7 @@
                 rel="noopener noreferrer"
               >
                 <img
-                  src="./images/instagram-logo.png"
+                  src="./images/insta-svg.svg"
                   alt="instagram"
                   class="footer-socials-instagram-logo"
                 >
@@ -386,10 +386,14 @@
           <div class="footer-contacts">
             <p class="footer-contacts-title">Контакти:</p>
             <p class="footer-contacts-description">
-              вул. М. Грушевського, 6; Київ, 01001
-              тел. +38 (044) 278-13-57
+              <a href="https://www.google.com/maps?q=вул.+Михайла+Грушевського,+6,+Київ,+01001" target="_blank">
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+
+              <a href="tel:+380442781357" target="_blank">+38 (044) 278-13-57</a>
+
               факс +38 (044) 278-74-54
-              e-mail: info@namu.kiev.ua
+              <a href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
             </p>
           </div>
 
