add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -386,14 +386,19 @@
           <div class="footer-contacts">
             <p class="footer-contacts-title">Контакти:</p>
             <p class="footer-contacts-description">
-              <a href="https://www.google.com/maps?q=вул.+Михайла+Грушевського,+6,+Київ,+01001" target="_blank">
+              <a class="footer-contacts-description-link" href="https://www.google.com/maps?q=вул.+Михайла+Грушевського,+6,+Київ,+01001" target="_blank">
                 вул. М. Грушевського, 6; Київ, 01001
               </a>
 
-              <a href="tel:+380442781357" target="_blank">+38 (044) 278-13-57</a>
+              <a
+                class="footer-contacts-description-link"
+                href="tel:+380442781357"
+                target="_blank"
+              >+38 (044) 278-13-57</a>
 
-              факс +38 (044) 278-74-54
-              <a href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
+              <a class="footer-contacts-description-link"> факс +38 (044) 278-74-54</a>
+
+              <a class="footer-contacts-description-link" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
             </p>
           </div>
 
