add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -381,6 +381,28 @@
               Каса припиняє роботу за 1 годину до закриття музею
             </p>
 
+            <p class="footer-schedule-description-on-tablet">
+              <strong>12:00 — 20:00</strong> середа<br>
+              <strong>12:00 — 20:00</strong> четвер<br>
+              <strong>12:00 — 20:00</strong> п’ятниця<br>
+              <strong>11:00 — 19:00</strong> субота<br>
+              <strong>11:00 — 19:00</strong> неділя<br><br>
+
+              Вихідні понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+
+            <p class="footer-schedule-description-on-desktop">
+              <strong>12:00 — 20:00</strong> середа<br>
+              <strong>12:00 — 20:00</strong> четвер<br>
+              <strong>12:00 — 20:00</strong> п’ятниця<br>
+              <strong>11:00 — 19:00</strong> субота<br>
+              <strong>11:00 — 19:00</strong> неділя<br><br>
+
+              <strong>Вихідні:</strong> понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+
           </div>
 
           <div class="footer-contacts">
