add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -114,15 +114,15 @@
             <p class="aside-schedule-title">Графік роботи</p>
             <div class="aside-schedule-time-and-description">
               <p class="aside-schedule-time">
-                <strong>12:00 — 20:00</strong> середа<br>
-                <strong>12:00 — 20:00</strong> четвер<br>
-                <strong>12:00 — 20:00</strong> п’ятниця<br>
-                <strong>11:00 — 19:00</strong> субота<br>
-                <strong>11:00 — 19:00</strong> неділя<br><br>
+                <span><strong>12:00 — 20:00</strong> середа</span><br>
+                <span><strong>12:00 — 20:00</strong> четвер</span><br>
+                <span><strong>12:00 — 20:00</strong> п’ятниця</span><br>
+                <span><strong>11:00 — 19:00</strong> субота</span><br>
+                <span><strong>11:00 — 19:00</strong> неділя</span><br><br>
               </p>
 
               <p class="aside-schedule-description">
-                Вихідні понеділок, вівторок<br>
+                <strong>Вихідні:</strong> понеділок, вівторок<br>
                 Каса припиняє роботу за 1 годину до закриття музею
               </p>
             </div>
