add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,10 @@
             <h1 class="header__tittle-content">ХУДОЖНІЙ МУЗЕЙ</h1>
           </div>
 
+          <div>
+            <h5 class="header__rotate">ПОДІЇ</h5>
+          </div>
+
           <div class="header__search-form">
             <input
               class="header__search-form--text"
