--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -7,13 +9,299 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com"
+    crossorigin="true">
+    <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com"
+    crossorigin="true">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <script
+    src="scripts/main.js"
+    defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__content">
+        <div class="header__top">
+          <div class="container">
+            <div class="top-bar"
+              id="top">
+              <a
+                href="#menu"
+                class="top-bar__icon"
+                ></a>
+
+              <a
+              href="#"
+              class="top-bar__logo">
+                NA<br>MU
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="header__bottom">
+          <div class="container">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+            <a
+            href="#">
+              <button class="header__button">
+                КВИТКИ
+                <img src="../src/images/Button.svg" alt="Button"
+                class="header__arrow">
+              </button>
+            </a>
+
+          </div>
+
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu"
+      id="menu">
+      <div class="container">
+        <div class="menu__top">
+          <a
+          href="#"
+          class="menu__close">
+          </a>
+
+          <article class="menu__about">
+            <div class="menu__navigation">
+              <a
+              class="menu__nav"
+              href="#gallery">Галерея</a>
+              <a
+              class="menu__nav"
+              href="#event">Виставки та<br> події</a>
+            </div>
+
+            <div class="menu__navigation">
+              <a
+              class="menu__nav"
+              href="#inform">Про Нас</a>
+              <a
+              class="menu__nav"
+              href="#inform">Контакти</a>
+            </div>
+          </article>
+        </div>
+
+        <aside class="menu__information">
+          Графік роботи
+          <div class="menu__work">
+            <div class="menu__schedule"><strong>12:00 — 20:00</strong>середа</div>
+            <div class="menu__schedule"><strong>12:00 — 20:00</strong>четвер</div>
+            <div class="menu__schedule"><strong>12:00 — 20:00</strong>п’ятниця</div>
+            <div class="menu__schedule"><strong>11:00 — 19:00</strong>субота</div>
+            <div class="menu__schedule"><strong>11:00 — 19:00</strong>неділя</div>
+          </div>
+
+          <strong>Вихідні:</strong> понеділок, вівторок<br>
+          Каса припиняє роботу за 1 годину
+          до закриття музею
+        </aside>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="container">
+        <div
+        class="main__event"
+        id="event">
+          <h2 class="title">Актуальні події</h2>
+          <img
+          class="main__picture"
+          src="../src/images/picture1.svg"
+          alt="picture1">
+          <section class="main__playbill">
+            <div class="exhibion">
+              ВИСТАВКА
+              <div class="main__date">26.08-29.11.2019</div>
+            </div>
+
+            <div class="main__name name">Йду і повертаюсь</div>
+            <div class="main__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </div>
+          </section>
+
+          <img
+          class="main__picture"
+          src="../src/images/picture2.svg"
+          alt="picture2">
+          <section class="main__playbill">
+            <div class="exhibion">
+              ВИСТАВКА
+              <div class="main__date">26.08-29.11.2019</div>
+            </div>
+
+            <div class="main__name name">І спогади і мрії</div>
+            <div class="main__text">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+          </section>
+        </div>
+      </div>
+
+      <section class="main__lection">
+        <div class="container">
+          <div class="main__box">
+            <div class="main__content exhibion">
+              ЛЕКЦІЯ
+              <div class="main__date">26/08/2019 - 11:00</div>
+            </div>
+
+            <div class="name">Від класицизму до романтизму</div>
+          </div>
+        </div>
+      </section>
+
+
+      <section
+      class="main__gallery gallery"
+      id="gallery">
+        <div class="container">
+          <h2 class="title">Галерея</h2>
+          <img src="../src/images/picture4.svg" alt="picture4">
+        </div>
+      </section>
+
+      <section class="main__registration">
+        <div class="container">
+          <h2 class="title">Підписка</h2>
+          <div class="main__events">Бути в курсі всіх актуальних подій та останніх новин.</div>
+
+          <form class="main__form"
+            onsubmit="this.reset(); return false;">
+
+            <input
+              class="main__email"
+              type="email"
+              placeholder="E-mail">
+
+            <button class="main__button">
+              <img src="../src/images/Button-orange.svg" alt="Button1"
+              class="main__arrow">
+            </button>
+          </form>
+        </div>
+
+      </section>
+
+      <section
+      class="main__inform"
+      id="inform">
+        <div class="container">
+          <article class="main__network">
+            <a
+              href="#"
+              class="top-bar__logo">
+              NA<br>MU
+            </a>
+
+            <div class="main__icons">
+              <a href="#">
+                <img src="../src/images/facebook.svg" alt="facebook">
+              </a>
+              <a href="#">
+                <img src="../src/images/instagram.svg" alt="instagram">
+              </a>
+            </div>
+
+          </article>
+
+          <article class="main__schedule">
+            <aside class="main__information">
+              Графік роботи
+              <div class="main__work">
+                <div class="main__day"><strong>12:00 — 20:00</strong> середа</div>
+                <div class="main__day"><strong>12:00 — 20:00</strong> четвер</div>
+                <div class="main__day"><strong>12:00 — 20:00</strong> п’ятниця</div>
+                <div class="main__day"><strong>11:00 — 19:00</strong> субота</div>
+                <div class="main__day"><strong>11:00 — 19:00</strong> неділя</div>
+              </div>
+              Вихідні понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </aside>
+
+            <aside class="main__information">
+              Контакти:
+              <div class="main__contacts">
+                <a class="main__nav"
+                href="https://g.co/kgs/sxc7u5A"
+                target="_blank"
+                >вул. М. Грушевського, 6; Київ, 01001
+                </a>
+
+                <a class="main__nav"
+                href="tel:+38 (044) 278-13-57"
+                >тел. +38 (044) 278-13-57
+                </a>
+
+                <a class="main__nav"
+                href="tel:+38 (044) 278-74-54"
+                >факс +38 (044) 278-74-54
+                </a>
+
+                <a class="main__nav"
+                  href="mailto:">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </div>
+            </aside>
+          </article>
+
+          <a
+            href="#top"
+            class="main__butt">
+            <button class="main__up"><img src="../src/images/up.svg" alt="button up"></button>
+          </a>
+
+          <article class="main__about">
+            <div class="main__navigation">
+              <a
+              class="main__nav"
+              href="#">Галерея</a>
+              <a
+              class="main__nav"
+              href="#">Виставки та події</a>
+            </div>
+
+            <div class="main__navigation">
+              <a
+              class="main__nav"
+              href="#">Про Нас</a>
+              <a
+              class="main__nav"
+              href="#">Контакти</a>
+            </div>
+          </article>
+        </div>
+      </section>
+
+    </main>
+
+    <footer class="footer">
+      <div class="footer__text">
+        Designed by Zhyriada Marina
+      </div>
+      <div class="footer__text">Copyright © 2019. All Rights Reserved.</div>
+    </footer>
   </body>
 </html>
