--- a/src/index.html
+++ b/src/index.html
@@ -39,12 +39,12 @@
               id="top">
               <a
                 href="#menu"
-                class="top-bar__icon"
+                class="top-bar__icon img"
                 ></a>
 
               <a
               href="#"
-              class="top-bar__logo">
+              class="top-bar__logo img">
                 NA<br>MU
               </a>
             </div>
@@ -53,19 +53,24 @@
 
         <div class="header__bottom">
           <div class="container">
+            <div class="bottom">
+              <a
+                href="#menu"
+                class="bottom__icon"
+                ></a>
+            </div>
+
             <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-
-            <a
-            href="#">
-              <button class="header__button">
-                КВИТКИ
-                <img src="../src/images/Button.svg" alt="Button"
-                class="header__arrow">
-              </button>
-            </a>
-
           </div>
-
+          <a
+          href="#"
+          class="header__tickets img">
+            <button class="header__button">
+              КВИТКИ
+              <img src="../src/images/Button.svg" alt="Button"
+              class="header__arrow nav">
+            </button>
+          </a>
         </div>
       </div>
     </header>
@@ -74,47 +79,53 @@
       class="page__menu"
       id="menu">
       <div class="container">
-        <div class="menu__top">
-          <a
-          href="#"
-          class="menu__close">
-          </a>
+        <div class="page__grid">
 
-          <article class="menu__about">
-            <div class="menu__navigation">
+          <div class="menu__activites">
+            <a href="#" class="menu__close"></a>
+
+            <div class="navigation">
               <a
-              class="menu__nav"
+              class="menu__nav nav"
               href="#gallery">Галерея</a>
               <a
-              class="menu__nav"
+              class="menu__nav nav"
               href="#event">Виставки та<br> події</a>
             </div>
-
-            <div class="menu__navigation">
+            <div class="navigation">
               <a
-              class="menu__nav"
+              class="menu__nav nav"
               href="#inform">Про Нас</a>
               <a
-              class="menu__nav"
+              class="menu__nav nav"
               href="#inform">Контакти</a>
             </div>
-          </article>
-        </div>
 
-        <aside class="menu__information">
-          Графік роботи
-          <div class="menu__work">
-            <div class="menu__schedule"><strong>12:00 — 20:00</strong>середа</div>
-            <div class="menu__schedule"><strong>12:00 — 20:00</strong>четвер</div>
-            <div class="menu__schedule"><strong>12:00 — 20:00</strong>п’ятниця</div>
-            <div class="menu__schedule"><strong>11:00 — 19:00</strong>субота</div>
-            <div class="menu__schedule"><strong>11:00 — 19:00</strong>неділя</div>
           </div>
 
-          <strong>Вихідні:</strong> понеділок, вівторок<br>
-          Каса припиняє роботу за 1 годину
-          до закриття музею
-        </aside>
+          <div class="menu__graf">
+            <div class="menu__schedule">Графік роботи</div>
+
+            <div class="menu__work">
+              <div class="menu__days">
+                <div class="main__day"><strong>12:00 — 20:00</strong> середа</div>
+                <div class="main__day"><strong>12:00 — 20:00</strong> четвер</div>
+                <div class="main__day"><strong>12:00 — 20:00</strong> п’ятниця</div>
+                <div class="main__day"><strong>11:00 — 19:00</strong> субота</div>
+                <div class="main__day"><strong>11:00 — 19:00</strong> неділя</div>
+
+              </div>
+
+              <div class="menu__weekend">
+                Вихідні понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </div>
+            </div>
+
+          </div>
+
+        </div>
       </div>
     </aside>
 
@@ -123,13 +134,13 @@
         <div
         class="main__event"
         id="event">
-          <h2 class="title">Актуальні події</h2>
+          <h2 class="main__title title">Актуальні події</h2>
           <img
           class="main__picture"
           src="../src/images/picture1.svg"
           alt="picture1">
           <section class="main__playbill">
-            <div class="exhibion">
+            <div class="main__exhibion exhibion">
               ВИСТАВКА
               <div class="main__date">26.08-29.11.2019</div>
             </div>
@@ -145,7 +156,7 @@
           src="../src/images/picture2.svg"
           alt="picture2">
           <section class="main__playbill">
-            <div class="exhibion">
+            <div class="main__exhibion exhibion">
               ВИСТАВКА
               <div class="main__date">26.08-29.11.2019</div>
             </div>
@@ -171,19 +182,50 @@
         </div>
       </section>
 
-
       <section
       class="main__gallery gallery"
       id="gallery">
         <div class="container">
-          <h2 class="title">Галерея</h2>
-          <img src="../src/images/picture4.svg" alt="picture4">
+          <h2 class="gallery__title title">Галерея</h2>
+
+          <div class="gallery__pictures">
+            <a
+            href="#"
+            class="gallery__picture gallery__picture--1"
+            >
+              <img class="gallery__img img"
+            src="../src/images/picture4.svg" alt="picture4">
+            </a>
+            <a
+            href="#"
+            class="gallery__picture gallery__picture--2"
+            >
+              <img class="gallery__img img"
+              src="../src/images/picture6.svg" alt="picture6">
+            </a>
+            <a
+            href="#"
+            class="gallery__picture gallery__picture--3"
+            >
+              <img class="gallery__img img"
+              src="../src/images/picture7.svg" alt="picture7">
+            </a>
+            <a
+            href="#"
+            class="gallery__picture gallery__picture--4"
+            >
+              <img class="gallery__img img"
+              src="../src/images/picture8.svg" alt="picture8">
+            </a>
+          </div>
+
+          <div class="gallery__pagi"></div>
         </div>
       </section>
 
       <section class="main__registration">
         <div class="container">
-          <h2 class="title">Підписка</h2>
+          <h2 class="main__subscription title">Підписка</h2>
           <div class="main__events">Бути в курсі всіх актуальних подій та останніх новин.</div>
 
           <form class="main__form"
@@ -192,6 +234,7 @@
             <input
               class="main__email"
               type="email"
+              required
               placeholder="E-mail">
 
             <button class="main__button">
@@ -207,26 +250,32 @@
       class="main__inform"
       id="inform">
         <div class="container">
-          <article class="main__network">
-            <a
-              href="#"
-              class="top-bar__logo">
-              NA<br>MU
-            </a>
-
-            <div class="main__icons">
-              <a href="#">
-                <img src="../src/images/facebook.svg" alt="facebook">
+          <div class="main__grid">
+            <article class="main__network">
+              <a
+                href="#"
+                class="top-bar__logo nav">
+                NA<br>MU
               </a>
-              <a href="#">
-                <img src="../src/images/instagram.svg" alt="instagram">
-              </a>
-            </div>
 
-          </article>
+              <div class="main__icons">
+                <a
+                class="nav"
+                target="_blank"
+                href="https://www.facebook.com/">
+                  <img src="../src/images/facebook.svg" alt="facebook">
+                </a>
+                <a
+                class="nav"
+                target="_blank"
+                href="https://www.instagram.com/">
+                  <img src="../src/images/instagram.svg" alt="instagram">
+                </a>
+              </div>
 
-          <article class="main__schedule">
-            <aside class="main__information">
+            </article>
+
+            <aside class="main__time information">
               Графік роботи
               <div class="main__work">
                 <div class="main__day"><strong>12:00 — 20:00</strong> середа</div>
@@ -240,7 +289,7 @@
               до закриття музею
             </aside>
 
-            <aside class="main__information">
+            <aside class="main__address information">
               Контакти:
               <div class="main__contacts">
                 <a class="main__nav"
@@ -265,43 +314,50 @@
                 </a>
               </div>
             </aside>
-          </article>
 
-          <a
-            href="#top"
-            class="main__butt">
-            <button class="main__up"><img src="../src/images/up.svg" alt="button up"></button>
-          </a>
-
-          <article class="main__about">
-            <div class="main__navigation">
+            <div class="main__butt">
               <a
-              class="main__nav"
+                href="#top"
+                >
+                <button class="main__up img"><img src="../src/images/up.svg" alt="button up"></button>
+              </a>
+
+            </div>
+
+            <div class="main__activites navigation">
+              <a
+              class="main__nav nav"
               href="#">Галерея</a>
               <a
-              class="main__nav"
+              class="main__nav nav"
               href="#">Виставки та події</a>
             </div>
 
-            <div class="main__navigation">
+            <div class="main__data navigation">
               <a
-              class="main__nav"
+              class="main__nav nav"
               href="#">Про Нас</a>
               <a
-              class="main__nav"
+              class="main__nav nav"
               href="#">Контакти</a>
             </div>
-          </article>
+
+
+
+          </div>
+
         </div>
       </section>
 
     </main>
 
-    <footer class="footer">
-      <div class="footer__text">
-        Designed by Zhyriada Marina
-      </div>
-      <div class="footer__text">Copyright © 2019. All Rights Reserved.</div>
-    </footer>
+    <div class="container">
+      <footer class="footer">
+        <div class="footer__text">
+          Designed by Zhyriada Marina
+        </div>
+        <div class="footer__text">Copyright © 2019. All Rights Reserved.</div>
+      </footer>
+    </div>
   </body>
 </html>
