--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,13 @@
       rel="stylesheet"
       href="./styles/main.scss"
     />
+
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+  />
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script
     src="scripts/main.js"
     defer
@@ -185,10 +192,10 @@
       <section
       class="main__gallery gallery"
       id="gallery">
-        <div class="container">
-          <h2 class="gallery__title title">Галерея</h2>
+        <h2 class="gallery__title title">Галерея</h2>
+        <div class="gallery__pictures">
 
-          <div class="gallery__pictures">
+          <div class="gallery__slide">
             <a
             href="#"
             class="gallery__picture gallery__picture--1"
@@ -196,6 +203,8 @@
               <img class="gallery__img img"
             src="../src/images/picture4.svg" alt="picture4">
             </a>
+          </div>
+          <div class="gallery__slide">
             <a
             href="#"
             class="gallery__picture gallery__picture--2"
@@ -203,6 +212,8 @@
               <img class="gallery__img img"
               src="../src/images/picture6.svg" alt="picture6">
             </a>
+          </div>
+          <div class="gallery__slide">
             <a
             href="#"
             class="gallery__picture gallery__picture--3"
@@ -210,6 +221,8 @@
               <img class="gallery__img img"
               src="../src/images/picture7.svg" alt="picture7">
             </a>
+          </div>
+          <div class="gallery__slide">
             <a
             href="#"
             class="gallery__picture gallery__picture--4"
@@ -219,8 +232,9 @@
             </a>
           </div>
 
-          <div class="gallery__pagi"></div>
         </div>
+
+        <div class="gallery__pagination"></div>
       </section>
 
       <section class="main__registration">
