--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      rel="icon"
+      href="images/NA MU.svg"
+      type="image/svg+xml"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com"
     crossorigin="true">
@@ -306,23 +311,23 @@
             <aside class="main__address information">
               Контакти:
               <div class="main__contacts">
-                <a class="main__nav"
+                <a class="main__nav nav"
                 href="https://g.co/kgs/sxc7u5A"
                 target="_blank"
                 >вул. М. Грушевського, 6; Київ, 01001
                 </a>
 
-                <a class="main__nav"
+                <a class="main__nav nav"
                 href="tel:+38 (044) 278-13-57"
                 >тел. +38 (044) 278-13-57
                 </a>
 
-                <a class="main__nav"
+                <a class="main__nav nav"
                 href="tel:+38 (044) 278-74-54"
                 >факс +38 (044) 278-74-54
                 </a>
 
-                <a class="main__nav"
+                <a class="main__nav nav"
                   href="mailto:">
                   e-mail: info@namu.kiev.ua
                 </a>
