--- a/src/index.html
+++ b/src/index.html
@@ -194,13 +194,14 @@
         </div>
       </section>
 
+
       <section
-      class="main__gallery gallery"
+      class="main__gallery gallery swiper"
       id="gallery">
         <h2 class="gallery__title title">Галерея</h2>
-        <div class="gallery__pictures">
+        <div class="swiper-wrapper">
 
-          <div class="gallery__slide">
+          <div class="swiper-slide gallery__slide">
             <a
             href="#"
             class="gallery__picture gallery__picture--1"
@@ -209,7 +210,7 @@
             src="../src/images/picture4.svg" alt="picture4">
             </a>
           </div>
-          <div class="gallery__slide">
+          <div class="swiper-slide gallery__slide">
             <a
             href="#"
             class="gallery__picture gallery__picture--2"
@@ -218,7 +219,7 @@
               src="../src/images/picture6.svg" alt="picture6">
             </a>
           </div>
-          <div class="gallery__slide">
+          <div class="swiper-slide gallery__slide">
             <a
             href="#"
             class="gallery__picture gallery__picture--3"
@@ -227,7 +228,7 @@
               src="../src/images/picture7.svg" alt="picture7">
             </a>
           </div>
-          <div class="gallery__slide">
+          <div class="swiper-slide gallery__slide">
             <a
             href="#"
             class="gallery__picture gallery__picture--4"
@@ -236,10 +237,9 @@
               src="../src/images/picture8.svg" alt="picture8">
             </a>
           </div>
-
         </div>
 
-        <div class="gallery__pagination"></div>
+        <div class="swiper-pagination gallery__pagination"></div>
       </section>
 
       <section class="main__registration">
@@ -291,7 +291,6 @@
                   <img src="../src/images/instagram.svg" alt="instagram">
                 </a>
               </div>
-
             </article>
 
             <aside class="main__time information">
@@ -360,9 +359,6 @@
               class="main__nav nav"
               href="#">Контакти</a>
             </div>
-
-
-
           </div>
 
         </div>
