--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
             <div class="navigation">
               <a
               class="menu__nav nav"
-              href="#gallery">Галерея</a>
+              href="#gallery #galler">Галерея</a>
               <a
               class="menu__nav nav"
               href="#event">Виставки та<br> події</a>
@@ -194,53 +194,69 @@
         </div>
       </section>
 
-
-      <section
-      class="main__gallery gallery swiper"
+      <div
+      class="main__swiper"
       id="gallery">
-        <h2 class="gallery__title title">Галерея</h2>
-        <div class="swiper-wrapper">
-
-          <div class="swiper-slide gallery__slide">
-            <a
-            href="#"
-            class="gallery__picture gallery__picture--1"
-            >
-              <img class="gallery__img img"
-            src="../src/images/picture4.svg" alt="picture4">
-            </a>
+        <div class="swiper">
+          <h2 class="swiper__title">Галерея</h2>
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img
+                src="../src/images/picture4.svg"
+                alt="picture4"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+              src="../src/images/rectangle.svg"
+              alt="picture4"
+            />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="../src/images/picture4.svg"
+                alt="picture4"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="../src/images/rectangle.svg"
+                alt="picture4"
+              />
+            </div>
           </div>
-          <div class="swiper-slide gallery__slide">
-            <a
-            href="#"
-            class="gallery__picture gallery__picture--2"
-            >
-              <img class="gallery__img img"
+
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+
+      <div
+        class="gallery"
+        id="galler">
+        <div class="container">
+          <h2 class="gallery__title title">Галерея</h2>
+          <div class="gallery__pictures">
+            <a href="#" class="gallery__picture gallery__picture--1">
+              <img class="gallery__img"
+              src="../src/images/picture4.svg" alt="picture4">
+            </a>
+            <a href="#" class="gallery__picture gallery__picture--2">
+              <img class="gallery__img"
               src="../src/images/picture6.svg" alt="picture6">
             </a>
-          </div>
-          <div class="swiper-slide gallery__slide">
-            <a
-            href="#"
-            class="gallery__picture gallery__picture--3"
-            >
-              <img class="gallery__img img"
+            <a href="#" class="gallery__picture gallery__picture--3">
+              <img class="gallery__img"
               src="../src/images/picture7.svg" alt="picture7">
             </a>
-          </div>
-          <div class="swiper-slide gallery__slide">
-            <a
-            href="#"
-            class="gallery__picture gallery__picture--4"
-            >
-              <img class="gallery__img img"
+            <a href="#" class="gallery__picture gallery__picture--4">
+              <img class="gallery__img"
               src="../src/images/picture8.svg" alt="picture8">
             </a>
+
           </div>
         </div>
 
-        <div class="swiper-pagination gallery__pagination"></div>
-      </section>
+      </div>
 
       <section class="main__registration">
         <div class="container">
@@ -345,7 +361,7 @@
             <div class="main__activites navigation">
               <a
               class="main__nav nav"
-              href="#">Галерея</a>
+              href="#gallery galler">Галерея</a>
               <a
               class="main__nav nav"
               href="#">Виставки та події</a>
@@ -375,4 +391,27 @@
       </footer>
     </div>
   </body>
+
+  <script type="module">
+    import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs';
+    const swiper = new Swiper('.swiper', {
+      slidesPerView: 1,
+      spaceBetween: 16,
+      direction: 'horizontal',
+      loop: true,
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+      mousewhell: true,
+      keyboard: true,
+      breakpoints: {
+      640: {
+      slidesPerView: 2,
+      spaceBetween: 20
+      },
+    }
+    });
+  </script>
+
 </html>
