--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
             <div class="bottom">
               <a
                 href="#menu"
-                class="bottom__icon"
+                class="bottom__icon img"
                 ></a>
             </div>
 
@@ -274,7 +274,7 @@
 
             <button class="main__button">
               <img src="../src/images/Button-orange.svg" alt="Button1"
-              class="main__arrow">
+              class="main__arrow nav">
             </button>
           </form>
         </div>
