--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
     </header>
 
     <aside
-      class="page__menu"
+      class="page__menu menu"
       id="menu">
       <div class="container">
         <div class="page__grid">
@@ -194,68 +194,67 @@
         </div>
       </section>
 
-      <div
-      class="main__swiper"
-      id="gallery">
-        <div class="swiper">
-          <h2 class="swiper__title">Галерея</h2>
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img
-                src="../src/images/picture4.svg"
-                alt="picture4"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-              src="../src/images/rectangle.svg"
-              alt="picture4"
-            />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="../src/images/picture4.svg"
-                alt="picture4"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
+      <div id="gallery">
+        <div
+        class="main__swiper">
+          <div class="swiper">
+            <h2 class="swiper__title">Галерея</h2>
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  src="../src/images/picture4.svg"
+                  alt="picture4"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
                 src="../src/images/rectangle.svg"
                 alt="picture4"
               />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="../src/images/picture4.svg"
+                  alt="picture4"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="../src/images/rectangle.svg"
+                  alt="picture4"
+                />
+              </div>
+            </div>
+
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+
+        <div
+          class="gallery">
+          <div class="container">
+            <h2 class="gallery__title title">Галерея</h2>
+            <div class="gallery__pictures">
+              <a href="#" class="gallery__picture gallery__picture--1">
+                <img class="gallery__img img"
+                src="../src/images/picture4.svg" alt="picture4">
+              </a>
+              <a href="#" class="gallery__picture gallery__picture--2">
+                <img class="gallery__img img"
+                src="../src/images/picture6.svg" alt="picture6">
+              </a>
+              <a href="#" class="gallery__picture gallery__picture--3">
+                <img class="gallery__img img"
+                src="../src/images/picture7.svg" alt="picture7">
+              </a>
+              <a href="#" class="gallery__picture gallery__picture--4">
+                <img class="gallery__img img"
+                src="../src/images/picture8.svg" alt="picture8">
+              </a>
+
             </div>
           </div>
-
-          <div class="swiper-pagination"></div>
         </div>
-      </div>
-
-      <div
-        class="gallery"
-        id="galler">
-        <div class="container">
-          <h2 class="gallery__title title">Галерея</h2>
-          <div class="gallery__pictures">
-            <a href="#" class="gallery__picture gallery__picture--1">
-              <img class="gallery__img"
-              src="../src/images/picture4.svg" alt="picture4">
-            </a>
-            <a href="#" class="gallery__picture gallery__picture--2">
-              <img class="gallery__img"
-              src="../src/images/picture6.svg" alt="picture6">
-            </a>
-            <a href="#" class="gallery__picture gallery__picture--3">
-              <img class="gallery__img"
-              src="../src/images/picture7.svg" alt="picture7">
-            </a>
-            <a href="#" class="gallery__picture gallery__picture--4">
-              <img class="gallery__img"
-              src="../src/images/picture8.svg" alt="picture8">
-            </a>
-
-          </div>
-        </div>
-
       </div>
 
       <section class="main__registration">
@@ -361,10 +360,10 @@
             <div class="main__activites navigation">
               <a
               class="main__nav nav"
-              href="#gallery galler">Галерея</a>
+              href="#gallery">Галерея</a>
               <a
               class="main__nav nav"
-              href="#">Виставки та події</a>
+              href="#event">Виставки та події</a>
             </div>
 
             <div class="main__data navigation">
