--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,445 @@
 <!doctype html>
-<html lang="en">
+<html
+  class="page"
+  lang="en"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      rel="icon"
+      href="./images/icons/favicon.png"
+      type="image/png"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__image"></div>
+
+      <div class="container">
+        <div class="header__content">
+          <a
+            href="#menu"
+            class="icon icon--menu"
+          ></a>
+
+          <a class="header__logo">
+            <div class="logo"></div>
+          </a>
+
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+          <form class="header__form">
+            <input
+              type="text"
+              class="header__input"
+              placeholder="КВИТКИ"
+              readonly
+            />
+            <button
+              type="submit"
+              class="header__button"
+            >
+              <a
+                href="#events"
+                class="icon icon--arrow-light"
+              ></a>
+            </button>
+          </form>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="menu__container">
+        <div class="container">
+          <div class="menu__content">
+            <div class="menu__top">
+              <a
+                href="#"
+                class="icon icon--close"
+              ></a>
+
+              <nav class="menu__nav nav">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a
+                      href="#gallery"
+                      class="nav__link"
+                    >
+                      Галерея
+                    </a>
+                  </li>
+
+                  <li class="nav__item">
+                    <a
+                      href="#about-us"
+                      class="nav__link"
+                    >
+                      Про Нас
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a
+                      href="#events"
+                      class="nav__link"
+                    >
+                      Виставки та події
+                    </a>
+                  </li>
+
+                  <li class="nav__item">
+                    <a
+                      href="#contacts"
+                      class="nav__link"
+                    >
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+
+            <div class="menu__bottom">
+              <div class="menu__schedule schedule schedule--menu">
+                <p class="schedule__title schedule__title--menu">
+                  Графік роботи
+                </p>
+                <p class="schedule__day schedule__day--menu">
+                  <strong>12:00 — 20:00</strong>
+                  Середа
+                </p>
+                <p class="schedule__day schedule__day--menu">
+                  <strong>12:00 — 20:00</strong>
+                  Четвер
+                </p>
+                <p class="schedule__day schedule__day--menu">
+                  <strong>12:00 — 20:00</strong>
+                  П’ятниця
+                </p>
+                <p class="schedule__day schedule__day--menu">
+                  <strong>11:00 — 19:00</strong>
+                  Субота
+                </p>
+                <p class="schedule__day schedule__day--menu">
+                  <strong>11:00 — 19:00</strong>
+                  Неділя
+                </p>
+              </div>
+
+              <div class="schedule__note-block note-block">
+                <p class="schedule__note schedule__note--menu">
+                  Вихідні понеділок, вівторок.
+                  <br />
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <section
+            class="current-events"
+            id="events"
+          >
+            <h2 class="current-events__title">Актуальні події</h2>
+
+            <div class="current-events__events">
+              <article class="current-events__event event">
+                <img
+                  class="event__image"
+                  src="images/events/rectangle1.jpg"
+                  alt="event image"
+                />
+                <div class="event__info">
+                  <div class="event__meta">
+                    <h4 class="event__category">ВИСТАВКА</h4>
+                    <h5 class="event__date">26.08-29.11.2019</h5>
+                  </div>
+                  <h3 class="event__title">Йду і повертаюсь</h3>
+                  <p class="event__description">
+                    Національний Художній Музей України презентує унікальну
+                    частину колекції Градобанку - українське мистецтво другої
+                    половини 1980-1995 років.
+                  </p>
+                </div>
+              </article>
+
+              <article class="current-events__event event">
+                <img
+                  class="event__image"
+                  src="images/events/rectangle2.jpg"
+                  alt="event image"
+                />
+                <div class="event__info">
+                  <div class="event__meta">
+                    <h4 class="event__category">ВИСТАВКА</h4>
+                    <h5 class="event__date">26.08-29.11.2019</h5>
+                  </div>
+                  <h3 class="event__title">І спогади і мрії</h3>
+                  <p class="event__description">
+                    Національний художній музей України до 100 річчя від дня
+                    народження видатної української художниці Тетяни Яблонської
+                    відкриває ретроспективну ювілейну виставку «І спогади і
+                    мрії».
+                  </p>
+                </div>
+              </article>
+
+              <article
+                class="current-events__announcement announcement overflow-block"
+              >
+                <img
+                  class="announcement__image"
+                  src="images/announcement/announcement.jpg"
+                  alt="announcement image"
+                />
+                <div class="announcement__info">
+                  <div class="announcement__meta">
+                    <h4 class="announcement__category">ЛЕКЦІЯ</h4>
+                    <h5 class="announcement__date">26/08/2019 - 11:00</h5>
+                  </div>
+                  <h3 class="announcement__title">
+                    Від класицизму до романтизму
+                  </h3>
+                </div>
+              </article>
+            </div>
+          </section>
+
+          <section
+            class="gallery"
+            id="gallery"
+          >
+            <h2 class="gallery__title">Галерея</h2>
+
+            <div class="carousel">
+              <div class="carousel-track">
+                <div class="carousel-slide">
+                  <img
+                    src="images/gallery/slide1.jpg"
+                    alt="Photo 1"
+                  />
+                </div>
+                <div class="carousel-slide">
+                  <img
+                    src="images/gallery/slide2.jpg"
+                    alt="Photo 2"
+                  />
+                </div>
+                <div class="carousel-slide">
+                  <img
+                    src="images/gallery/slide3.jpg"
+                    alt="Photo 3"
+                  />
+                </div>
+                <div class="carousel-slide">
+                  <img
+                    src="images/gallery/slide4.jpg"
+                    alt="Photo 4"
+                  />
+                </div>
+              </div>
+
+              <div class="carousel-nav">
+                <button data-slide="1"></button>
+                <button data-slide="2"></button>
+                <button data-slide="3"></button>
+                <button data-slide="4"></button>
+              </div>
+            </div>
+          </section>
+
+          <section
+            class="subscription-cta overflow-block"
+            id="about-us"
+          >
+            <div class="subscription-cta__content">
+              <h2 class="subscription-cta__title">Підписка</h2>
+              <p class="subscription-cta__description">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+              <form class="subscription-cta__form">
+                <input
+                  type="email"
+                  class="subscription-cta__input"
+                  placeholder="E-mail"
+                  required
+                />
+                <button
+                  type="submit"
+                  class="subscription-cta__button"
+                >
+                  <div class="icon icon--arrow-dark"></div>
+                </button>
+              </form>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__icons-block">
+            <a
+              href="#"
+              class="footer__logo"
+            >
+              <div class="footer__logo logo logo--footer"></div>
+            </a>
+            <div class="footer__socials socials">
+              <a
+                class="icon icon--facebook"
+                href="https://www.facebook.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a>
+              <a
+                class="icon icon--instagram"
+                href="https://www.instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              ></a>
+            </div>
+          </div>
+          <div class="footer__info">
+            <div class="footer__schedule schedule">
+              <p class="schedule__title">Графік роботи</p>
+              <p class="schedule__day">
+                <strong>12:00 — 20:00</strong>
+                Середа
+              </p>
+              <p class="schedule__day">
+                <strong>12:00 — 20:00</strong>
+                Четвер
+              </p>
+              <p class="schedule__day">
+                <strong>12:00 — 20:00</strong>
+                П’ятниця
+              </p>
+              <p class="schedule__day">
+                <strong>11:00 — 19:00</strong>
+                Субота
+              </p>
+              <p class="schedule__day">
+                <strong>11:00 — 19:00</strong>
+                Неділя
+              </p>
+              <br />
+              <p class="schedule__note">
+                Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до
+                закриття музею
+              </p>
+            </div>
+
+            <div
+              class="footer__contacts contacts"
+              id="contacts"
+            >
+              <p class="contacts__title">Контакти:</p>
+              <a
+                class="contacts__address"
+                href="https://www.google.com/maps/search/?api=1&query=вул.+М.+Грушевського,+6,+Київ,+01001"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <br />
+              <a
+                class="contacts__phone"
+                href="tel:+380442781357"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+              <br />
+
+              <a
+                class="contacts__fax"
+                href="tel:+380442787454"
+              >
+                Факс +38 (044) 278-74-54
+              </a>
+              <br />
+              <a
+                class="contacts__email"
+                href="mailto:info@namu.kiev.ua"
+              >
+                е-mail: info@namu.kiev.ua
+              </a>
+            </div>
+
+            <a
+              class="arrow-up"
+              href="#"
+            ></a>
+          </div>
+
+          <div class="footer__menu">
+            <nav class="footer__nav nav nav--footer">
+              <ul class="nav__list nav__list--footer">
+                <li class="nav__item">
+                  <a
+                    href="#gallery"
+                    class="nav__link nav__link--footer"
+                  >
+                    Галерея
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a
+                    href="#about-us"
+                    class="nav__link nav__link--footer"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#events"
+                    class="nav__link nav__link--footer"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a
+                    href="#contacts"
+                    class="nav__link nav__link--footer"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="copyright-info">
+            <span>Designed by Zhyriada Marina</span>
+            <span>Copyright © 2019. All Rights Reserved.</span>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
