add header, started aside menu

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!-- #region head -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,14 +7,109 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Художній музей</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./images/favicon/favicon-48x48.png"
+      sizes="48x48"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./images/favicon/favicon.svg"
+    />
+    <link
+      rel="shortcut icon"
+      href="./images/favicon/favicon.ico"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/favicon/apple-touch-icon.png"
+    />
+    <meta
+      name="apple-mobile-web-app-title"
+      content="Художній музей"
+    />
+    <link
+      rel="manifest"
+      href="./images/favicon/site.webmanifest"
+    />
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <!-- #endregion -->
+
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <a
+          href="#menu"
+          class="icon icon--menu"
+        ></a>
+        <div class="header__content">
+          <div class="header__info">
+            <h1 class="header__title">Художній музей</h1>
+            <p class="header__descr">Події</p>
+            <a
+              href="#"
+              class="button header__button"
+            >
+              Квитки
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <a
+          href="/"
+          class="hero__logo logo"
+        >
+          <img
+            class="logo__img"
+            src="./images/logo.svg"
+            alt="museum_logo"
+          />
+        </a>
+      </div>
+    </header>
+
+    <aside
+      class="side-menu"
+      id="menu"
+    >
+      <div class="side-menu__top">
+        <div class="container">
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
+        </div>
+      </div>
+      <div class="side-menu__bottom"></div>
+    </aside>
+
+    <main class="main"></main>
+    <footer class="footer"></footer>
   </body>
 </html>
