--- a/src/index.html
+++ b/src/index.html
@@ -69,13 +69,15 @@
         <div class="header__content">
           <div class="header__info">
             <h1 class="header__title">Художній музей</h1>
-            <p class="header__descr">Події</p>
+
             <a
               href="#"
               class="button header__button"
             >
-              Квитки
+              <span class="button__text">Квитки</span>
+              <span class="button__icon"></span>
             </a>
+            <p class="header__descr">події</p>
           </div>
         </div>
       </div>
@@ -100,16 +102,75 @@
     >
       <div class="side-menu__top">
         <div class="container">
-          <a
+
+          <div class="side-menu__nav">
+            <a
             href="#"
             class="icon icon--close"
           ></a>
+            <nav class="menu">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="#gallery" class="menu__link">Галерея</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#gallery" class="menu__link">Про Нас</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#gallery" class="menu__link">Виставки та події</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#gallery" class="menu__link">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
         </div>
       </div>
       <div class="side-menu__bottom"></div>
     </aside>
 
-    <main class="main"></main>
+    <main class="main">
+      <section
+        id="events"
+        class="events"
+      >
+        <div class="container">
+          <div class="section__content events__content">
+            <h2 class="events__title section-title section-title--small">
+              Актуальні події
+            </h2>
+            <div class="events__list">
+              <div class="event">
+                <img src="./images/events/event1.jpeg" alt="event1"
+                class="event__img">
+                <div class="event__meta">
+                  <div class="event__type">Виставка</div>
+                  <div class="event__date">26.08-29.11.2019</div>
+                </div>
+
+                <h3 class="event__title">Йду і повертаюсь</h3>
+                <div class="event__descr">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
+              </div>
+
+              <div class="event">
+                <img src="./images/events/event2.jpeg" alt="event2"
+                class="event__img">
+                <div class="event__meta">
+                  <div class="event__type">Виставка</div>
+                  <div class="event__date">26.08-29.11.2019</div>
+                </div>
+
+                <h3 class="event__title">Йду і повертаюсь</h3>
+                <div class="event__descr">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer"></footer>
   </body>
 </html>
