--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,53 @@
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+
+    <header class="header">
+      <div class="header__inner container">
+        <div class="header__left">
+          <button
+            class="header__burder"
+            type="button"
+          >
+            <img
+              src="./images/icons/burger.svg"
+              alt="burger"
+            >
+          </button>
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="header__action">ПОДІЇ</div>
+          <div class="header__ticket">
+            <a
+              href="#"
+              class="header__ticket-link"
+            >
+              КВИТКИ
+            </a>
+            <button class="header__ticket-button button button--color-green">
+
+            </button>
+          </div>
+        </div>
+        <div class="header__rigth">
+          <a
+            href="#"
+            class="header__logo"
+          ><img
+              src="./images/logo.svg"
+              alt="logo"
+              class="header__logo-image"
+              width="170"
+              height="72"
+              loading="lazy"
+            ></a>
+        </div>
+      </div>
+    </header>
+
+    <main class="main"></main>
+
+    <footer class="footer"></footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
