finished header with menu

--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
       id="menu"
     >
       <div class="side-menu__top">
-        <div class="container">
+        <div class="container side-menu__content">
 
           <div class="side-menu__nav">
             <a
@@ -124,6 +124,36 @@
                 </li>
               </ul>
             </nav>
+          </div>
+
+          <div class="site-menu__schedule schedule">
+            <div class="schedule__header">Графік роботи</div>
+            <div class="schedule__content">
+              <ul class="schedule__list">
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00</span><span class="schedule__weekday">середа</span>
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00</span><span class="schedule__weekday">четвер</span>
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00</span><span class="schedule__weekday">п’ятниця</span>
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00</span><span class="schedule__weekday">субота</span>
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00</span><span class="schedule__weekday">неділя</span>
+                </li>
+              </ul>
+              <div class="schedule__descr">
+                <p>Вихідні: понеділок, вівторок</p>
+                <p>Каса припиняє роботу за 1 годину
+                до закриття музею
+                </p>
+              </div>
+            </div>
+
           </div>
 
         </div>
