--- a/src/index.html
+++ b/src/index.html
@@ -201,6 +201,89 @@
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+
+      <div class="container">
+        <div class="footer__top">
+          <div class="footer__logo-social">
+            <a href="/" class="footer__logo logo">
+              <img
+                class="logo__img"
+                src="./images/logo.svg"
+                alt="museum_logo"
+              />
+            </a>
+            <div class="social">
+
+              <a class="social__icon social__icon--fb" href="https://www.facebook.com/namu.museum/"></a>
+
+              <a class="social__icon social__icon--in" href="https://www.instagram.com/namu.museum/"></a>
+
+            </div>
+          </div>
+
+
+          <div class="footer__schedule schedule">
+            <div class="schedule__header">Графік роботи</div>
+            <div class="schedule__content">
+              <ul class="schedule__list">
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00</span><span class="schedule__weekday">середа</span>
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00</span><span class="schedule__weekday">четвер</span>
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00</span><span class="schedule__weekday">п’ятниця</span>
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00</span><span class="schedule__weekday">субота</span>
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00</span><span class="schedule__weekday">неділя</span>
+                </li>
+              </ul>
+              <div class="schedule__descr">
+                <p>Вихідні: понеділок, вівторок</p>
+                <p>Каса припиняє роботу за 1 годину
+                до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="footer__address">
+            <div class="schedule__header">Контакти:</div>
+            <p>вул. М. Грушевського, 6; Київ, 01001</p>
+            <a href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
+            <p>факс +38 (044) 278-74-54</p>
+            <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+
+          </div>
+
+          <nav class="footer__menu menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Галерея</a>
+              </li>
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Про Нас</a>
+              </li>
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Виставки та події</a>
+              </li>
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+
+        </div>
+        <div class="footer__bottom">
+          <div class="footer__copyright">Copyright © 2019. All Rights Reserved.</div>
+          <div class="footer__author">Designed by Zhyriada Marina</div>
+        </div>
+      </div>
+
+    </footer>
   </body>
 </html>
