--- a/src/index.html
+++ b/src/index.html
@@ -260,6 +260,8 @@
 
           </div>
 
+          <div class="footer__divider"></div>
+
           <nav class="footer__menu menu">
             <ul class="menu__list">
               <li class="menu__item">
