--- a/src/index.html
+++ b/src/index.html
@@ -175,25 +175,31 @@
               <div class="event">
                 <img src="./images/events/event1.jpeg" alt="event1"
                 class="event__img">
-                <div class="event__meta">
-                  <div class="event__type">Виставка</div>
-                  <div class="event__date">26.08-29.11.2019</div>
+                <div class="event__info">
+                  <div class="event__meta">
+                    <div class="event__type">Виставка</div>
+                    <div class="event__date">26.08-29.11.2019</div>
+                  </div>
+
+                  <h3 class="event__title">Йду і повертаюсь</h3>
+                  <p class="event__descr">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
                 </div>
 
-                <h3 class="event__title">Йду і повертаюсь</h3>
-                <div class="event__descr">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
               </div>
 
               <div class="event">
                 <img src="./images/events/event2.jpeg" alt="event2"
                 class="event__img">
-                <div class="event__meta">
-                  <div class="event__type">Виставка</div>
-                  <div class="event__date">26.08-29.11.2019</div>
+                <div class="event__info">
+                  <div class="event__meta">
+                    <div class="event__type">Виставка</div>
+                    <div class="event__date">26.08-29.11.2019</div>
+                  </div>
+
+                  <h3 class="event__title">Йду і повертаюсь</h3>
+                  <p class="event__descr">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
                 </div>
 
-                <h3 class="event__title">Йду і повертаюсь</h3>
-                <div class="event__descr">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
               </div>
             </div>
 
@@ -201,6 +207,8 @@
         </div>
       </section>
     </main>
+
+
     <footer class="footer">
 
       <div class="container">
