--- a/src/index.html
+++ b/src/index.html
@@ -206,8 +206,26 @@
           </div>
         </div>
       </section>
-    </main>
 
+      <section
+      id="announcement"
+      class="announcement"
+    >
+        <div class="container">
+          <div class="section__content announcement__content">
+
+            <div class="announcement__meta">
+              <div class="announcement__type">ЛЕКЦІЯ</div>
+              <div class="announcement__date">26/08/2019 - 11:00</div>
+            </div>
+            <h2 class="announcement__title">
+              Від класицизму до романтизму
+            </h2>
+
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer class="footer">
 
